@@ -551,7 +551,7 @@ CPP_PTH := $(foreach dir,${MDL_PTH},-I${dir})
 # Variables having to do with binary executables created by module
 MDL_BIN_TRG := ncap ncatted ncbo ncecat ncflint ncks ncpdq ncra ncrename ncwa # NCO binary targets
 MDL_BIN_SYM_LNK := ncdiff ncea nces ncrcat # Symbolic links
-MDL_BIN_SPT := ncclimo ncremap # Scripts
+MDL_BIN_SPT := ncclimo ncremap ncz2psx # Scripts
 ifeq (${MPI},Y)
 # MDL_MPI_TRG := mpncbo mpncecat mpncflint mpncpdq mpncra mpncwa # MPI binary targets
  MDL_MPI_TRG := # MPI binary targets
@@ -1769,6 +1769,9 @@ else
 	${CC} -o $@${BNR_SFX} $< ${MY_OBJ_DIR}/ncap_lex.o ${MY_OBJ_DIR}/ncap_utl.o ${LDFLAGS}
 endif
 	chmod 755 $@${BNR_SFX}
+ncz2psx:   ${MY_BIN_DIR}/ncz2psx
+${MY_BIN_DIR}/ncz2psx:	${MY_DAT_DIR}/ncz2psx
+	/bin/cp -f ${MY_DAT_DIR}/ncz2psx ${MY_BIN_DIR}
 bin: ${MDL_BIN_TRG} ${MDL_BIN_SPT}
 binclean: bin_cln
 bin_cln: 
