@@ -4,6 +4,8 @@
 	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha06: Cheney';git push
 	git tag -a 5.1.1-alpha06 -m 'all: in_zarr4, nco_fl_blocksize() fix;ncclimo region_name, cell_methods';git push --tags
 
+	* Add install rules for ncz2psx to Makefile.am, CMakeLists.txt, bld/Makefile
+
 	* Add build rules for NCZarr files to data/Makefile.am, build in_zarr4 and symlinks
 
 2022-08-23  Charlie Zender  <zender@uci.edu>
